<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.sarge.jove</groupId>
	<artifactId>JOVE</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>JOVE</name>
	<description>JOVE</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>17</release>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        --enable-preview
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

	<dependencies>
	   <dependency>
	       <groupId>org.sarge.lib</groupId>
			<artifactId>lib</artifactId>
			<version>1.0.0-SNAPSHOT</version>
	   </dependency>
	
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>

		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>5.3.0</version>
		</dependency>

		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		    <version>20210307</version>
		</dependency>
<!--
		<dependency>
		    <groupId>org.apache.velocity</groupId>
		    <artifactId>velocity</artifactId>
		    <version>1.7</version>
		    <exclusions>
		    	<exclusion>
		    		<groupId>commons-lang</groupId>
		    		<artifactId>commons-lang</artifactId>
		    	</exclusion>
		    	<exclusion>
		    		<groupId>commons-collections</groupId>
		    		<artifactId>commons-collections</artifactId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		
		<dependency>
		     <groupId>org.apache.velocity</groupId>
		     <artifactId>velocity-tools</artifactId>
		     <version>2.0</version>
		     <exclusions>
		     	<exclusion>
		     		<groupId>commons-collections</groupId>
		     		<artifactId>commons-collections</artifactId>
		     	</exclusion>
		     </exclusions>
		</dependency>
 -->
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>4.0.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
